--- a/Examples/macOS/FlangerAndChorus/FlangerAndChorus/Base.lproj/Main.storyboard
+++ b/Examples/macOS/FlangerAndChorus/FlangerAndChorus/Base.lproj/Main.storyboard
@@ -1022,22 +1022,22 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="ch_feedbackReadout" destination="eJ6-VT-7ft" id="RaR-7X-BkH"/>
-                        <outlet property="ch_feedbackSlider" destination="Rdp-du-ydS" id="x7F-aE-UEj"/>
-                        <outlet property="ch_modDepthReadout" destination="hcv-1J-pn8" id="ZHV-qM-9rU"/>
-                        <outlet property="ch_modDepthSlider" destination="oCZ-1S-41m" id="Des-Gy-Zn5"/>
-                        <outlet property="ch_modFreqReadout" destination="wCv-wj-2Kn" id="Tca-YE-DNq"/>
-                        <outlet property="ch_modFreqSlider" destination="n5S-dE-rwV" id="xrP-fT-JKJ"/>
-                        <outlet property="ch_wetFractionReadout" destination="BIm-8j-UeP" id="DNI-gv-c0n"/>
-                        <outlet property="ch_wetFractionSlider" destination="wsO-z4-VUm" id="e4P-bc-lWh"/>
-                        <outlet property="fl_feedbackReadout" destination="fL7-Fk-hzC" id="vcJ-3s-w09"/>
-                        <outlet property="fl_feedbackSlider" destination="sAI-2d-rFk" id="MoL-0a-QgF"/>
-                        <outlet property="fl_modDepthReadout" destination="4el-v0-e2h" id="452-fH-Zld"/>
-                        <outlet property="fl_modDepthSlider" destination="bSq-s4-nB4" id="lmG-0K-zMI"/>
-                        <outlet property="fl_modFreqReadout" destination="K2R-Po-jce" id="Gbh-25-kdw"/>
-                        <outlet property="fl_modFreqSlider" destination="Awf-aK-1az" id="cb4-7S-xyr"/>
-                        <outlet property="fl_wetFractionReadout" destination="tKR-ZT-2tU" id="0cE-i4-8jv"/>
-                        <outlet property="fl_wetFractionSlider" destination="YpW-1c-6Sh" id="KFb-Bd-V0r"/>
+                        <outlet property="chorusFeedbackReadout" destination="eJ6-VT-7ft" id="RaR-7X-BkH"/>
+                        <outlet property="chorusFeedbackSlider" destination="Rdp-du-ydS" id="x7F-aE-UEj"/>
+                        <outlet property="chorusDepthReadout" destination="hcv-1J-pn8" id="ZHV-qM-9rU"/>
+                        <outlet property="chorusDepthSlider" destination="oCZ-1S-41m" id="Des-Gy-Zn5"/>
+                        <outlet property="chorusFrequencyReadout" destination="wCv-wj-2Kn" id="Tca-YE-DNq"/>
+                        <outlet property="chorusFrequencySlider" destination="n5S-dE-rwV" id="xrP-fT-JKJ"/>
+                        <outlet property="chorusDryWetMixReadout" destination="BIm-8j-UeP" id="DNI-gv-c0n"/>
+                        <outlet property="chorusDryWetMixSlider" destination="wsO-z4-VUm" id="e4P-bc-lWh"/>
+                        <outlet property="flangerFeedbackReadout" destination="fL7-Fk-hzC" id="vcJ-3s-w09"/>
+                        <outlet property="flangerFeedbackSlider" destination="sAI-2d-rFk" id="MoL-0a-QgF"/>
+                        <outlet property="flangerDepthReadout" destination="4el-v0-e2h" id="452-fH-Zld"/>
+                        <outlet property="flangerDepthSlider" destination="bSq-s4-nB4" id="lmG-0K-zMI"/>
+                        <outlet property="flangerFrequencyReadout" destination="K2R-Po-jce" id="Gbh-25-kdw"/>
+                        <outlet property="flangerFrequencySlider" destination="Awf-aK-1az" id="cb4-7S-xyr"/>
+                        <outlet property="flangerDryWetMixReadout" destination="tKR-ZT-2tU" id="0cE-i4-8jv"/>
+                        <outlet property="flangerDryWetMixSlider" destination="YpW-1c-6Sh" id="KFb-Bd-V0r"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
