--- a/Examples/iOS/Recorder/Recorder/Base.lproj/Main.storyboard
+++ b/Examples/iOS/Recorder/Recorder/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -196,6 +196,7 @@
                         <outlet property="loopButton" destination="3mv-Q4-wQx" id="iMS-gz-FLN"/>
                         <outlet property="mainButton" destination="39X-bk-Sha" id="ulE-Od-pFi"/>
                         <outlet property="moogLadderTitle" destination="2d8-rp-3wR" id="Z4K-xn-F5C"/>
+                        <outlet property="outputPlot" destination="KgW-Jo-05K" id="Jet-n2-wje"/>
                         <outlet property="resetButton" destination="Vys-ow-YgK" id="Yub-Eg-HLJ"/>
                         <outlet property="resonanceSlider" destination="H1W-4C-cmC" id="arT-gw-CgI"/>
                     </connections>
