--- a/Examples/iOS/SporthEditor/SporthEditor/Base.lproj/Main.storyboard
+++ b/Examples/iOS/SporthEditor/SporthEditor/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fK6-aW-d0K">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fK6-aW-d0K">
     <device id="ipad12_9" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -244,6 +244,7 @@
                     <connections>
                         <outlet property="codeEditorTextView" destination="KRV-Kj-ufW" id="ZLJ-PT-YR7"/>
                         <outlet property="keyboard" destination="Bh2-Lf-k29" id="vzv-bz-4zi"/>
+                        <outlet property="plot" destination="Tps-4D-kDx" id="JbZ-rf-fFi"/>
                         <outlet property="runButton" destination="aYn-Jm-ewa" id="8ki-5p-WEc"/>
                         <outlet property="slider1" destination="s5c-hy-qek" id="ybZ-gV-vWJ"/>
                         <outlet property="slider2" destination="cSD-1a-JTN" id="Pc6-4M-wB9"/>
