Get AUv2 custom GUI working
Getting an AUv2 plugin's custom GUI to actually open requires that a whole series of things match up exactly.
At this point the custom GUI is just a label, but now that it's coming up in AU Lab I can start adding controls.

--- a/Developer/AKSampler/Mac AUv2 Plugin/Plugin GUI/AKSampler_UIView.xib
+++ b/Developer/AKSampler/Mac AUv2 Plugin/Plugin GUI/AKSampler_UIView.xib
@@ -5,7 +5,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner"/>
+        <customObject id="-2" userLabel="File's Owner" customClass="AKSampler_ViewFactory">
+            <connections>
+                <outlet property="uiFreshlyLoadedView" destination="c22-O7-iKe" id="paG-Dr-5Zg"/>
+            </connections>
+        </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe" customClass="AKSampler_UIView">
