--- a/Examples/iOS/AKSamplerDemo/AKSamplerDemo/Base.lproj/Main.storyboard
+++ b/Examples/iOS/AKSamplerDemo/AKSamplerDemo/Base.lproj/Main.storyboard
@@ -18,35 +18,64 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kF0-ZN-TPP">
-                                <rect key="frame" x="165" y="313" width="44" height="41"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <state key="normal" title="Play"/>
-                                <connections>
-                                    <action selector="toggleSound:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Sa-4X-WOX"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click Play button" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CjF-YN-dtB">
-                                <rect key="frame" x="123" y="222" width="128.5" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or use MIDI" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="62Y-NG-D3a">
-                                <rect key="frame" x="144.5" y="252.5" width="87" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="IuF-yV-sbe">
+                                <rect key="frame" x="82.5" y="232.5" width="210" height="202"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a sample set:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CjF-YN-dtB">
+                                        <rect key="frame" x="0.0" y="0.0" width="210" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7sn-WQ-SES">
+                                        <rect key="frame" x="0.0" y="20.5" width="210" height="30"/>
+                                        <state key="normal" title="Brass"/>
+                                        <connections>
+                                            <action selector="preset1:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HVb-Ta-31K"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eI-2L-OIH">
+                                        <rect key="frame" x="0.0" y="50.5" width="210" height="30"/>
+                                        <state key="normal" title="LoTine"/>
+                                        <connections>
+                                            <action selector="preset2:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eDY-Dy-NQl"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cE4-sH-iF7">
+                                        <rect key="frame" x="0.0" y="80.5" width="210" height="30"/>
+                                        <state key="normal" title="Metalimba"/>
+                                        <connections>
+                                            <action selector="preset3:" destination="BYZ-38-t0r" eventType="touchUpInside" id="X6y-D7-Idb"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wMl-Ma-Cfy">
+                                        <rect key="frame" x="0.0" y="110.5" width="210" height="30"/>
+                                        <state key="normal" title="Pluck Bass"/>
+                                        <connections>
+                                            <action selector="preset4:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RoB-Ji-vkO"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="then touch Play or use MIDI" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="62Y-NG-D3a">
+                                        <rect key="frame" x="0.0" y="140.5" width="210" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kF0-ZN-TPP">
+                                        <rect key="frame" x="0.0" y="161" width="210" height="41"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <state key="normal" title="Play"/>
+                                        <connections>
+                                            <action selector="toggleSound:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Sa-4X-WOX"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="kF0-ZN-TPP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dap-Bm-tLF"/>
-                            <constraint firstItem="62Y-NG-D3a" firstAttribute="top" secondItem="CjF-YN-dtB" secondAttribute="bottom" constant="10" id="dzj-Jh-7Hh"/>
-                            <constraint firstItem="62Y-NG-D3a" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="grd-62-8gv"/>
-                            <constraint firstItem="CjF-YN-dtB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lR2-d7-8vm"/>
-                            <constraint firstItem="kF0-ZN-TPP" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ohb-SN-ArM"/>
-                            <constraint firstItem="kF0-ZN-TPP" firstAttribute="top" secondItem="62Y-NG-D3a" secondAttribute="bottom" constant="40" id="va5-PF-RKP"/>
+                            <constraint firstItem="IuF-yV-sbe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5fL-ye-Idl"/>
+                            <constraint firstItem="IuF-yV-sbe" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Zks-EY-YKv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
